使用index.ts代替dist.index

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   </style>
 </head>
 <body>
-  <script src="./dist/index.umd.js"></script>
-  <script>
+  <div id="app"></div>
+  <script type="module">
+    import CreepCube from '/src/index.ts'
     new CreepCube()
   </script>
 </body>
