--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module">
-    import CreepCube from '/src/index.ts'
-    new CreepCube()
+  <script type="module" src="src/main.ts">
   </script>
 </body>
 </html>
